@@ -1149,10 +1149,11 @@ DEFINE_METHOD_SETTER(altlist, Set_elt)
 
 SEXP R_new_altrep(R_altrep_class_t aclass, SEXP data1, SEXP data2)
 {
+    void ALTREP_SET_TYPEOF(SEXP, int); /* in memory.c */
     SEXP sclass = R_SEXP(aclass);
     int type = ALTREP_CLASS_BASE_TYPE(sclass);
     SEXP ans = CONS(data1, data2);
-    SET_TYPEOF(ans, type);
+    ALTREP_SET_TYPEOF(ans, type);
     SET_ALTREP_CLASS(ans, sclass);
     return ans;
 }
